# WarCardGame_FinalProject

./: .gitignore  CMakeLists.txt  Card.cpp  Card.hpp  Deck.cpp  Deck.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  README.md  ReadMe.txt  computerPlayer.cpp  computerPlayer.hpp  humanPlayer.cpp  humanPlayer.hpp  main.cpp
